<?xml version="1.0"?>
<package format="2">

  <name>kd_tree</name>

  <version>1.0.0</version>

  <description>K-D Tree library supporting k-dimensions</description>

  <author email="sean.GH1231@gmail.com">Sean Crutchlow</author>
  <maintainer email="sean.GH1231@gmail.com">Sean Crutchlow</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
